fix overflow

--- a/css/fund.scss
+++ b/css/fund.scss
@@ -149,6 +149,7 @@ body{
     margin-bottom: 4%;
 
     .swiper-container{
+        overflow: hidden;
 
         .swiper-wrapper{
             .swiper-slide{
